# RustLabeller

./: Cargo.toml
src/: button_shader.wgsl  egui_tools.rs  input_controller.rs  lib.rs  line_shader.wgsl  main.rs  polygon_shader.wgsl  shader.wgsl
src/annotation/: manager.rs
src/global/: state.rs
src/ui/: ui_manager.rs
