[package]
name = "RustMusicPlayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
atomic_enum = "0.3.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
earcutr = "0.4.3"
env_logger = "0.11.5"
geo = "0.28.0"
geo-booleanop = "0.3.2"
i_triangle = "0.26.0"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = "0.30.5"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
